GTK: Ensure UPPER_SEPARATORs get drawn when using a fractional scale

This CL is a Linux port of the equivalent hack for Windows [1].

[1] https://cs.chromium.org/chromium/src/ui/views/controls/menu/menu_separator.cc?rcl=d1853b975434d1b31a2143fa3a25af48fafda7a0&l=41

BUG=748473
R=estade@chromium.org

Change-Id: I838cb00a147fe9b63dd1a36e1e485fa8f5e0c4a4